# dockerfile-parser-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile.test  LICENSE  README.md
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
examples/: splice.rs  stages.rs
src/: dockerfile.pest  dockerfile.rs  dockerfile_parser.pest  dockerfile_parser.rs  error.rs  image.rs  lib.rs  parser.rs  splicer.rs  stage.rs  test_util.rs  util.rs
src/instructions/: arg.rs  cmd.rs  copy.rs  entrypoint.rs  env.rs  expose.rs  from.rs  label.rs  misc.rs  mod.rs  run.rs
tests/: common.rs  parsing.rs
