[package]
name = "dockerfile-parser"
description = "a Rust library for parsing, validating, and modifying Dockerfiles"
authors = ["Tim Buckley <timothy.jas.buckley@hpe.com>"]
edition = "2018"
license = "MIT"
keywords = ["parser", "docker", "dockerfile", "pest"]
homepage = "https://github.com/HewlettPackard/dockerfile-parser-rs/"
repository = "https://github.com/HewlettPackard/dockerfile-parser-rs/"
exclude = [".circleci/**/*"]
readme = "README.md"

# NOTE: do not change the version here, it will be replaced with the git tag
# version by CI
version = "0.1.0"

[badges]
circle-ci = { repository = "HewlettPackard/dockerfile-parser-rs", branch = "master" }

[dependencies]
pest = "2.1"
pest_derive = "2.1"
snafu = "0.6"
enquote = "1.1"
regex = "1.5"
lazy_static = "1.4"

[dev-dependencies]
indoc = "1.0"
pretty_assertions = "1.0.0"

[lib]
name = "dockerfile_parser"
path = "src/lib.rs"
