[package]
name = "dockerfile-parser"
description = "a Rust library for parsing, validating, and modifying Dockerfiles"
authors = ["Tim Buckley <timothy.jas.buckley@hpe.com>"]
edition = "2021"
license = "MIT"
keywords = ["parser", "docker", "dockerfile", "pest"]
homepage = "https://github.com/HewlettPackard/dockerfile-parser-rs/"
repository = "https://github.com/HewlettPackard/dockerfile-parser-rs/"
exclude = [".circleci/**/*"]
readme = "README.md"

# NOTE: do not change the version here, it will be replaced with the git tag
# version by CI
version = "0.1.0"

[badges]
circle-ci = { repository = "HewlettPackard/dockerfile-parser-rs", branch = "master" }

[dependencies]
pest = "2.7"
pest_derive = "2.7"
snafu = "0.8"
enquote = "1.1"
regex = "1.11"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.1"

[lib]
name = "dockerfile_parser"
path = "src/lib.rs"
